# fcitx-virtualkeyboard-adapter

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  flake.nix  virtualkeyboard-adapter.nix
.github/workflows/: nix-build.yml  pr-checks.yml
src/: CMakeLists.txt  VirtualKeyboardAdapter.cpp  VirtualKeyboardAdapter.hpp  virtualkeyboardadapter.conf.in
